<resources>
    <string name="app_name">Balda</string>

    // --- MAIN SCREEN ---
    // Main screen buttons
    <string name="start_one_man_game">Start one-man game</string>
    <string name="start_game_with_android">Start game with android</string>
    <string name="start_game_with_friends">Start game with friends</string>
    <string name="settings">Settings</string>

    // --- GAME SETTINGS SCREEN ---
    <string name="settings_for_one_man_game">Settings for one-man game</string>
    <string name="settings_for_multiplayer_game">Settings for multiplayer game</string>
    // Block titles
    <string name="choose_field_size">Choose field size</string>
    <string name="enter_players">Enter player names</string>
    <string name="enter_init_word">Enter the initial word</string>
    <string name="choose_field_type">Choose field type</string>

    <string name="init_word">Initial word</string>
    <string name="player_name">Player name</string>
    <string name="player_name_error">Use only letters, numbers and underscore</string>
    <string name="player_name_count_limit_max">Only %d players are allowed</string>
    <string name="player_name_count_limit_min">Add at least %d players</string>
    <string name="player_name_already_used">This name has already been used</string>
    <string name="start_game">Start game</string>
    <string name="non_existent_word">this is a non-existent word</string>
    <string name="need_enter_word">Need to enter a word</string>
    <string name="non_appropriate_word_length">length of word must be %d for this field</string>
    <string name="square">Square</string>
    <string name="hexagon">Hexagon</string>
    <string name="field_small">Small</string>
    <string name="field_medium">Medium</string>
    <string name="field_large">Large</string>
    <string name="field_extra_large">Extra Large</string>

    // --- SPLASH SCREEN ---
    <string name="database_creation">Database creation</string>
    <string name="first_launch">The first launch of the application takes a little time</string>

    // --- GAME SCREEN ---
    <string name="your_score">Your score: %1$d</string>
    <string name="score">%s %d</string>
    <string name="used_words">Used words:</string>
    <string name="game_paused">The game is paused</string>
    <string name="resume_game">Resume game</string>
    // Toolbar
    <string name="one_man_game">One-man game</string>
    <string name="multiplayer_game">Multiplayer game</string>
    <string name="confirm">Confirm</string>
    <string name="show_used_words">Show used words</string>
    <string name="show_move_hint">Show move hint</string>
    <string name="pause_game">Pause</string>
    // Tooltips
    <string name="enter_new_letter">First you need to add a new letter on field</string>
    <string name="no_such_word">There is no such word in the dictionary</string>
    <string name="such_word_have_already_been_used">Such word have already been used in this game</string>
    <string name="must_contain_new_letter">The word must contain a new letter</string>
    <string name="invalid_symbol">It is invalid symbol</string>
    <string name="successful_move">The word "%s" is accepted, +%d points</string>
    <string name="time_over">Time has run out</string>
    // Animation
    <string name="plus_points"> +%1$d points</string>
    // Hint
    <string name="hint_value">Hint: %s</string>
    <string name="hide">Hide</string>
    <string name="apply">Apply</string>
    // Game end dialog
    <string name="congratulations">Congratulations</string>
    <string name="congratulations_nickname">%s won: %d</string>
    <string name="you_won">You won\n Your score: %1$d</string>
    <string name="you_lost">You lost\n Your score: %1$d</string>
    <string name="filled_whole_field">You have filled whole field!\nYour score: %1$d</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="start_new_game">Start a new game</string>
    // Exit from game dialog
    <string name="exit">Exit</string>
    <string name="exit_game_message">Do you want to finish this game?\nIt will not be saved!</string>
    <string name="finish">Yes, finish the game</string>
    <!-- <string name="back_to_the_game">No, back to the game</string> -->
    <string name="back_to_the_game">No, continue</string>

    // --- RULES SCREEN ---
    <string name="title_rules">Rules of the Balda game</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    // List of rules
    <string name="title1">Start of the game</string>
    <string name="description1">This is the game start.\nInitial word written in the middle.\nIt can be any real word. wkjfjiwe gjwelg wag iwljg jkrge lagh rhl gaekrg jklaerlgk lareg laergljha egka jrlglha ghlagher gkhserh ghlaw rgieali jgrlaehr ghahe rglka4 glaw gl4i haehgf oaiw4 ghah 4hglia4w hgah34 gh4a hg4 </string>
    <string name="title2">Add a new letter</string>
    <string name="description2">Click on an empty cell to add a new letter to the field.\nYou can add only one letter by one move.\nYou can add letter only near by existing letter.</string>
    <string name="title3">Select a new word</string>
    <string name="description3">Make long click for select word.\nYou should to make up as long words as possible.\nAmount of points you get is equal to the length of the word.</string>
    <string name="title4">End of the game</string>
    <string name="description4">The game will end when there are no empty cells on the field.\nThe winner will be the one with the most points.</string>
    <string name="title5">Конец игры</string>
    <string name="description5">Игра заканчивается тогда, когда либо заполнены все клетки, либо невозможно составить очередное слово согласно указанным правилам.</string>
    <string name="title6">Конец игры</string>
    <string name="description6">Игра заканчивается тогда, когда либо заполнены все клетки, либо невозможно составить очередное слово согласно указанным правилам.</string>
    <string name="title7">Конец игры</string>
    <string name="description7">Игра заканчивается тогда, когда либо заполнены все клетки, либо невозможно составить очередное слово согласно указанным правилам.</string>

    <string name="not_implemented">Sorry, this function isn\'t implemented yet</string>

</resources>
