<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.adlab.balda.activities.MainActivity">

        <ImageView
            android:id="@+id/iv_balda_activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description_title"
            android:src="@drawable/balda_image" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_one_man_game"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_one_man_game" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_game_with_android"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/start_game_with_android" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_game_with_friends"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/start_game_with_friends" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_settings"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/settings" />
    </LinearLayout>

</ScrollView>


